force-app/main/default/objects/Opportunity/fields/ForecastGMTotals__c.field-meta.xml
<CustomField>
    <fullName>ForecastGMTotals__c</fullName>
    <label>Forecast GM Totals</label>
    <summarizedField>OpportunityLineItem.MRR__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.IsGlobalMeetRelated__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>