force-app/main/default/objects/Opportunity/fields/Generate_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Generate_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Estimate</label>
    <type>Checkbox</type>
</CustomField>