force-app/main/default/objects/Opportunity/fields/Generate_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Generate_Sales_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Sales Order</label>
    <type>Checkbox</type>
</CustomField>