force-app/main/default/objects/Opportunity/fields/GM4_Why_Required__c.field-meta.xml
<CustomField>
    <fullName>GM4_Why_Required__c</fullName>
    <label>GM4 Why Required?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>