force-app/main/default/objects/Opportunity/fields/GM_Version__c.field-meta.xml
<CustomField>
    <fullName>GM_Version__c</fullName>
    <label>GM Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GM5</fullName>
            </value>
            <value>
                <fullName>GM4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>