force-app/main/default/objects/Opportunity/fields/Government_Opportunity_Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Government_Opportunity_Inside_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X-Government Opportunity (Inside Sales)</label>
    <type>Checkbox</type>
</CustomField>