force-app/main/default/objects/Opportunity/fields/GovernmentOpportunity__c.field-meta.xml
<CustomField>
    <fullName>GovernmentOpportunity__c</fullName>
    <label>xGovernment Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Municipal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>