force-app/main/default/objects/Opportunity/fields/Has_Budget__c.field-meta.xml
<CustomField>
    <fullName>Has_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Management Criteria Met</description>
    <inlineHelpText>Management Criteria Met</inlineHelpText>
    <label>B: Has Budget</label>
    <type>Checkbox</type>
</CustomField>