force-app/main/default/objects/Opportunity/fields/Has_Integration__c.field-meta.xml
<CustomField>
    <fullName>Has_Integration__c</fullName>
    <formula>IF(INCLUDES(Products_of_Interest__c , &quot;Eloqua Integration&quot;), 1 , 0)+
IF(INCLUDES(Products_of_Interest__c , &quot;Hubspot Integration&quot;), 1 , 0)+
IF(INCLUDES(Products_of_Interest__c , &quot;Lync Integration&quot;), 1 , 0)+
IF(INCLUDES(Products_of_Interest__c , &quot;Marketo Integration&quot;), 1 , 0)+
IF(INCLUDES(Products_of_Interest__c , &quot;Pardot Integration&quot;), 1 , 0)+
IF(INCLUDES(Products_of_Interest__c , &quot;Salesforce Integration&quot;), 1 , 0)+
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Integration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>