force-app/main/default/objects/Opportunity/fields/Has_PGI_Contract__c.field-meta.xml
<CustomField>
    <fullName>Has_PGI_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field gets checked when a PGI Contract gets associated to an opportunity. Used in the process builder &apos;Adobe to create contract&apos;</description>
    <label>Has PGI Contract</label>
    <type>Checkbox</type>
</CustomField>