force-app/main/default/objects/Opportunity/fields/Has_Verbal_Approval__c.field-meta.xml
<CustomField>
    <fullName>Has_Verbal_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Management Criteria Met</description>
    <inlineHelpText>Management Criteria Met</inlineHelpText>
    <label>C: Has Verbal Approval</label>
    <type>Checkbox</type>
</CustomField>