force-app/main/default/objects/Opportunity/fields/highest_MRR_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>highest_MRR_Product_Name__c</fullName>
    <label>highest MRR Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>