force-app/main/default/objects/Opportunity/fields/highest_MRR_Product_Value__c.field-meta.xml
<CustomField>
    <fullName>highest_MRR_Product_Value__c</fullName>
    <label>highest MRR Product Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>