force-app/main/default/objects/Opportunity/fields/Highest_NRR_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Highest_NRR_Product_Name__c</fullName>
    <label>Highest NRR Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>