force-app/main/default/objects/Opportunity/fields/Highest_NRR_Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Highest_NRR_Product_Value__c</fullName>
    <label>Highest NRR Product Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>