force-app/main/default/objects/Opportunity/fields/Implementation_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Bookings__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is Professional service fees</description>
    <inlineHelpText>This is any and all implementation fees or pre-sale Professional Services.</inlineHelpText>
    <label>Implementation Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>