force-app/main/default/objects/Opportunity/fields/Implementation_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Request_Notes__c</fullName>
    <label>Implementation Request Notes</label>
    <type>TextArea</type>
</CustomField>