force-app/main/default/objects/Opportunity/fields/Implementation_Review_Request__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Review_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this to ask the Implementation Services team to become involved with this Opp.</inlineHelpText>
    <label>Implementation Review/Request</label>
    <type>Checkbox</type>
</CustomField>