force-app/main/default/objects/Opportunity/fields/Incumbent_Other_Product__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Other_Product__c</fullName>
    <label>Incumbent Other</label>
    <type>TextArea</type>
</CustomField>