force-app/main/default/objects/Opportunity/fields/Int_l_Audio_Rates_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Int_l_Audio_Rates_Discussed__c</fullName>
    <inlineHelpText>Indicate if Int&#39;l on-demand or op-assist audio was discussed/reviewed with customer during sale.</inlineHelpText>
    <label>Int&#39;l Audio Rates Discussed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>