force-app/main/default/objects/Opportunity/fields/Internal_User_Amount__c.field-meta.xml
<CustomField>
    <fullName>Internal_User_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Internal User - $ Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>