force-app/main/default/objects/Opportunity/fields/JointSellingInitiative__c.field-meta.xml
<CustomField>
    <fullName>JointSellingInitiative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is only to be selected by Sales Ops at this time and is only visible for Marketing, Sales Ops, and Admins at this time.  1/16/17 - CR</description>
    <label>Joint Selling Initiative</label>
    <type>Checkbox</type>
</CustomField>