force-app/main/default/objects/Opportunity/fields/Known_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Known_Competitors__c</fullName>
    <description>legacy RT field, being replaced by standard Competitor(s) pick list that PGi has</description>
    <inlineHelpText>Competitor/s that this opportunity is up against in obtaining a Closed/Won status.</inlineHelpText>
    <label>xxKnown Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8x8</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>Adobe Connect</fullName>
            </value>
            <value>
                <fullName>AnyMeeting</fullName>
            </value>
            <value>
                <fullName>Arkadin</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Avaya</fullName>
            </value>
            <value>
                <fullName>Beacon Live</fullName>
            </value>
            <value>
                <fullName>BigMarker</fullName>
            </value>
            <value>
                <fullName>Blue Jeans Network</fullName>
            </value>
            <value>
                <fullName>BluIP</fullName>
            </value>
            <value>
                <fullName>BrightTalk</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>C3 Conferencing</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>ClearSlide</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>ConvergeOne</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>DialPad</fullName>
            </value>
            <value>
                <fullName>DimDim</fullName>
            </value>
            <value>
                <fullName>Evolve IP</fullName>
            </value>
            <value>
                <fullName>Fonality</fullName>
            </value>
            <value>
                <fullName>Free Conference Call</fullName>
            </value>
            <value>
                <fullName>Fuze</fullName>
            </value>
            <value>
                <fullName>Fuze Meeting</fullName>
            </value>
            <value>
                <fullName>Global Crossing</fullName>
            </value>
            <value>
                <fullName>Google Hangouts</fullName>
            </value>
            <value>
                <fullName>GoTo Meeting/GoTo Webinar</fullName>
            </value>
            <value>
                <fullName>HighFive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>