force-app/main/default/objects/Opportunity/fields/LastModifiedUsersProfile__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedUsersProfile__c</fullName>
    <formula>LastModifiedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified User&apos;s Profile</label>
    <type>Text</type>
</CustomField>