force-app/main/default/objects/Opportunity/fields/Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Channel__c</fullName>
    <description>[12/9/16, JK]: MAPPED FROM LEAD OBJECT - Requested by Cohry Osborne to identify Inbound Leads vs Outbound Leads. Traditionally this is identified by Lead Owner, but this isn&#39;t always the case, which is why we need this field</description>
    <label>Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>