force-app/main/default/objects/Opportunity/fields/Lead_Source_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Campaign__c</fullName>
    <label>Lead Source Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10% Off Promo</fullName>
            </value>
            <value>
                <fullName>20% Off Promo</fullName>
            </value>
            <value>
                <fullName>2016 Marketing Predictions</fullName>
            </value>
            <value>
                <fullName>25% Off Collab</fullName>
            </value>
            <value>
                <fullName>25% Off Halloween Promo</fullName>
            </value>
            <value>
                <fullName>25% Off Webinar</fullName>
            </value>
            <value>
                <fullName>30% Off Thanksgiving</fullName>
            </value>
            <value>
                <fullName>40% Off Black Friday</fullName>
            </value>
            <value>
                <fullName>40% Off Collab</fullName>
            </value>
            <value>
                <fullName>40% Off Cyber Monday</fullName>
            </value>
            <value>
                <fullName>40% Off Halloween Promo</fullName>
            </value>
            <value>
                <fullName>40% Off Holiday</fullName>
            </value>
            <value>
                <fullName>40% off Oops</fullName>
            </value>
            <value>
                <fullName>40% Off Webinar</fullName>
            </value>
            <value>
                <fullName>5 Meeting Pitfalls</fullName>
            </value>
            <value>
                <fullName>5 Reasons Your Conferencing Sucks</fullName>
            </value>
            <value>
                <fullName>5 Winning Strategies Social Media</fullName>
            </value>
            <value>
                <fullName>8x8 (Packet8)</fullName>
            </value>
            <value>
                <fullName>Active Listening Infographic</fullName>
            </value>
            <value>
                <fullName>Ad</fullName>
            </value>
            <value>
                <fullName>Adobe Connect</fullName>
            </value>
            <value>
                <fullName>Agenda Template</fullName>
            </value>
            <value>
                <fullName>Aragon Report</fullName>
            </value>
            <value>
                <fullName>Audio-Conferencing</fullName>
            </value>
            <value>
                <fullName>Austin 2016</fullName>
            </value>
            <value>
                <fullName>Avaya</fullName>
            </value>
            <value>
                <fullName>Benchmarking Webinar Best Practices</fullName>
            </value>
            <value>
                <fullName>Better Meetings Toolbox</fullName>
            </value>
            <value>
                <fullName>Biggest Tech Issues</fullName>
            </value>
            <value>
                <fullName>Biggest Tech Issues - NPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>