force-app/main/default/objects/Opportunity/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADA Conference</fullName>
            </value>
            <value>
                <fullName>AdWords</fullName>
            </value>
            <value>
                <fullName>AMA</fullName>
            </value>
            <value>
                <fullName>AMA SendGrid</fullName>
            </value>
            <value>
                <fullName>Appointment Setting</fullName>
            </value>
            <value>
                <fullName>Ascend2</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>BOFU: Collab</fullName>
            </value>
            <value>
                <fullName>BOFU: FoxDen</fullName>
            </value>
            <value>
                <fullName>BOFU: Semi-Live</fullName>
            </value>
            <value>
                <fullName>BOFU: Webinar</fullName>
            </value>
            <value>
                <fullName>BoldChat</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>Cloud Expo</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>CTA Tech Summit</fullName>
            </value>
            <value>
                <fullName>CTA Tech Tour</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Data.com</fullName>
            </value>
            <value>
                <fullName>Datanyze</fullName>
            </value>
            <value>
                <fullName>Deloite500</fullName>
            </value>
            <value>
                <fullName>Digital Growth Con</fullName>
            </value>
            <value>
                <fullName>EM360</fullName>
            </value>
            <value>
                <fullName>eMedia</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>FoxDen.io</fullName>
            </value>
            <value>
                <fullName>FoxDen Connect, Workspaces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>