force-app/main/default/objects/Opportunity/fields/Lead_Source_Tradeshow__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Tradeshow__c</fullName>
    <label>Lead Source - Tradeshow</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACME 2012</fullName>
            </value>
            <value>
                <fullName>PubExpo 2011</fullName>
            </value>
            <value>
                <fullName>ACME 2011</fullName>
            </value>
            <value>
                <fullName>minDay November 2010</fullName>
            </value>
            <value>
                <fullName>Biotech October 2010</fullName>
            </value>
            <value>
                <fullName>CME Task Force October 2010</fullName>
            </value>
            <value>
                <fullName>ExL Pharma Meeting Planners Summit 2010</fullName>
            </value>
            <value>
                <fullName>Streaming Media Europe 2010</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>