force-app/main/default/objects/Opportunity/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Antares</fullName>
            </value>
            <value>
                <fullName>ATU Team Introduction</fullName>
            </value>
            <value>
                <fullName>Coeo</fullName>
            </value>
            <value>
                <fullName>Collective Activity</fullName>
            </value>
            <value>
                <fullName>Consortium Activity</fullName>
            </value>
            <value>
                <fullName>Content &amp; Code</fullName>
            </value>
            <value>
                <fullName>Email Enquiry</fullName>
            </value>
            <value>
                <fullName>Event / Activity</fullName>
            </value>
            <value>
                <fullName>FastTrack</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Inframon</fullName>
            </value>
            <value>
                <fullName>Kickback</fullName>
            </value>
            <value>
                <fullName>Landing Lead Introduction</fullName>
            </value>
            <value>
                <fullName>Modality Invoiced</fullName>
            </value>
            <value>
                <fullName>Organic Social Media</fullName>
            </value>
            <value>
                <fullName>Other Microsoft Introduction</fullName>
            </value>
            <value>
                <fullName>Paid For Social Media</fullName>
            </value>
            <value>
                <fullName>PGi</fullName>
            </value>
            <value>
                <fullName>PinPoint</fullName>
            </value>
            <value>
                <fullName>Please enter Channel Partner Record below</fullName>
            </value>
            <value>
                <fullName>Please enter Referral Account Record below</fullName>
            </value>
            <value>
                <fullName>Program Framework</fullName>
            </value>
            <value>
                <fullName>P-Seller Distributed</fullName>
            </value>
            <value>
                <fullName>Quorum</fullName>
            </value>
            <value>
                <fullName>Self Generated</fullName>
            </value>
            <value>
                <fullName>STU Team Introduction</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Web Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>