force-app/main/default/objects/Opportunity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Opportunity Owner&apos;s Management Level Report from SFDC user record</description>
    <label>Owner&apos;s Mngt Level Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>