force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
            <value>
                <fullName>Lack of Feature/Functionality</fullName>
            </value>
            <value>
                <fullName>Lost to Company Plan</fullName>
            </value>
            <value>
                <fullName>Monthly Billing</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Ne Need for Additional Users</fullName>
            </value>
            <value>
                <fullName>Not a Priority</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>