force-app/main/default/objects/Opportunity/fields/Managed_Svs_Support_Margin__c.field-meta.xml
<CustomField>
    <fullName>Managed_Svs_Support_Margin__c</fullName>
    <label>Managed Svs &amp; Support Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>