force-app/main/default/objects/Opportunity/fields/Manager_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Manager_Valuation__c</fullName>
    <inlineHelpText>Tretsky Gut Feel about the deal</inlineHelpText>
    <label>Manager Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>